src/snapshots/fec_receipt__tests__F3T_1917347_full.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|          F O R M   3           |
  | Congressional Campaign Report  |
  |          FEC-1917347           |
  |       ** TERMINATION **        |
  |================================|
2x|WHITSON FOR CONGRESS            |
  |C00908301 - GREAT FALLS, VA     |
  |--------------------------------|
  |Seat    VA-11                   |
  |Report  TER - Termination Report|
  |Period  Aug 21 - Sep 30, 2025   |
  |Elect   Sep 9, 2025, VA         |
  |--------------------------------|
  |THIS PERIOD                     |
  |Cash on hand, start       60,937|
  |+ Receipts                39,687|
  |- Disbursements          100,624|
  |Cash on hand, end              0|
  |--------------------------------|
  |RECEIPTS                        |
  |               PERIOD      CYCLE|
  |11a Individuals, itemized       |
  |               20,924    134,458|
  |11a Individuals, unitem.        |
  |               11,075     33,810|
  |11b Party committees            |
  |                    0      5,000|
  |11c PACs                        |
  |                6,200      8,250|
  |11e Total contributions         |
  |               38,199    181,518|
  |12 Transfers in                 |
  |                1,488     79,453|
  |13a Loans from candidate        |
  |                    0      6,427|
  |14 Offsets                      |
  |                    0        678|
  |16 TOTAL RECEIPTS               |
  |               39,687    268,077|
  |--------------------------------|
  |DISBURSEMENTS                   |
  |               PERIOD      CYCLE|
  |17 Operating                    |
  |               54,072    182,556|
  |19a Repaid candidate            |
  |                6,427      6,427|
  |20 Refunds                      |
  |                  125        125|
  |21 Other                        |
  |               40,000     78,969|
  |22 TOTAL DISBURSEMENTS          |
  |              100,624    268,077|
  |--------------------------------|
  |Signed  JASON D BOLES           |
  |        Oct 2, 2025             |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
