src/snapshots/fec_receipt__tests__F3XA_1909193_full.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|        F O R M   3 X           |
  |       PAC / Party Report       |
  |          FEC-1909193           |
  |        ** AMENDMENT **         |
  |================================|
2x|ACPAC ACA INTERNATIONAL         |
2x|POLITICAL ACTION COMMITTEE      |
  |C00034785 - Eagan, MN           |
  |Multicandidate committee        |
  |--------------------------------|
  |Report  12G - Pre-General       |
  |Period  Oct 1 - Oct 16, 2024    |
  |Elect   General, Nov 5, 2024, DC|
  |--------------------------------|
  |THIS PERIOD                     |
  |Cash on hand, start      254,938|
  |+ Receipts                17,026|
  |- Disbursements           22,334|
  |Cash on hand, end        249,630|
  |--------------------------------|
  |RECEIPTS                        |
  |               PERIOD       YEAR|
  |11a Individuals, itemized       |
  |               16,564    209,221|
  |11a Individuals, unitem.        |
  |                  300      2,563|
  |11c Other committees            |
  |                    0      5,000|
  |11d Total contributions         |
  |               16,864    216,784|
  |15 Offsets                      |
  |                  162      5,539|
  |19 TOTAL RECEIPTS               |
  |               17,026    222,323|
  |--------------------------------|
  |DISBURSEMENTS                   |
  |               PERIOD       YEAR|
  |21 Operating                    |
  |                  334      5,520|
  |23 To candidates                |
  |               22,000    225,750|
  |28 Refunds                      |
  |                    0        500|
  |31 TOTAL DISBURSEMENTS          |
  |               22,334    231,770|
  |--------------------------------|
  |Signed  Lori Ann Speiss         |
  |        Jul 25, 2025            |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
